--- a/Examples/DocStructure.html
+++ b/Examples/DocStructure.html
@@ -11,11 +11,11 @@
 
 <section>
 <ul>
-    <li><a href = "#Section1" title = "Section1">Go To Section 1</a></li>>
-    <li><a href = "#Section2" title = "Section2">Go To Section 2</a></li>>
-    <li><a href = "#Section3" title = "Section3">Go To Section 3</a></li>>
-    <li><a href = "#Section4" title = "Section4">Go To Section 4</a></li>>
-</ul>>
+    <li><a href = "#Section1" title = "Section1">Go To Section 1</a></li>
+    <li><a href = "#Section2" title = "Section2">Go To Section 2</a></li>
+    <li><a href = "#Section3" title = "Section3">Go To Section 3</a></li>
+    <li><a href = "#Section4" title = "Section4">Go To Section 4</a></li>
+</ul>
 </section>
 
 <section id ="Section1" >
